k8s-security-framework/policies/resource-governance/KSP-RES-005/tests/exception-policy-for-specific-resources.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: generate-resource-quota-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: generate-resource-quota
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name in ['ksp-res-005-exception', 'ksp-res-005-exception-secondary']
