k8s-security-framework/policies/resource-governance/KSP-RES-005/tests/exception-resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ksp-res-005-exception
  labels:
    policies.ksp.io/generate-resource-governance: enabled
    policies.ksp.io/generate-network-baseline: enabled
