k8s-security-framework/policies/resource-governance/KSP-RES-005/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ksp-res-005-exception
  labels:
    policies.ksp.io/generate-resource-governance: enabled
    policies.ksp.io/environment: staging
    policies.ksp.io/quota-class: medium
---
apiVersion: v1
kind: Namespace
metadata:
  name: ksp-res-005-exception-similar
  labels:
    policies.ksp.io/generate-resource-governance: enabled
    policies.ksp.io/environment: staging
    policies.ksp.io/quota-class: medium
