k8s-security-framework/policies/resource-governance/KSP-RES-005/tests/exception-similar-namespace-generated.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: namespace-resource-quota
  namespace: ksp-res-005-exception-similar
  labels:
    app.kubernetes.io/managed-by: kyverno
    policies.ksp.io/generated-by: ksp-res-005
    policies.ksp.io/environment: staging
    policies.ksp.io/quota-class: medium
spec:
  hard:
    requests.cpu: "6"
    requests.memory: "12Gi"
    limits.cpu: "12"
    limits.memory: "24Gi"
    pods: "75"
