k8s-security-framework/policies/resource-governance/KSP-RES-005/tests/exception.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: generate-resource-quota-exception
  namespace: policy-test
spec:
  exceptions:
    - policyName: generate-resource-quota
      ruleNames:
        - generate-resource-quota
  match:
    any:
      - resources:
          kinds:
            - Namespace
          names:
            - ksp-res-005-exception
          namespaces:
            - policy-test
