k8s-security-framework/policies/resource-governance/KSP-RES-005/tests/positive-opt-in-with-additional-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ksp-res-005-positive-opt-in-with-additional-labels
  labels:
    policies.ksp.io/generate-resource-governance: "enabled"
    policies.ksp.io/environment: staging
