k8s-security-framework/policies/resource-governance/KSP-RES-005/tests/positive-production-large-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: res-005-positive-production-large
  labels:
    policies.ksp.io/generate-resource-governance: enabled
    policies.ksp.io/environment: production
    policies.ksp.io/quota-class: large
