k8s-security-framework/policies/resource-governance/KSP-RES-005/tests/positive-staging-medium-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: res-005-positive-staging-medium
  labels:
    policies.ksp.io/generate-resource-governance: enabled
    policies.ksp.io/environment: staging
    policies.ksp.io/quota-class: medium
